--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "start": "node server.js"
   },
-   "dependencies": {
+  "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "mongodb": "^2.2.11",
